src/test/ui/reserved/reserved-become.stderr
error: expected pattern, found reserved keyword `become`
  --> $DIR/reserved-become.rs:12:9
   |
LL |     let become = 0;
   |         ^^^^^^ expected pattern

error: aborting due to previous error

